--- a/_posts/2019-07-01-anki.md
+++ b/_posts/2019-07-01-anki.md
@@ -33,11 +33,11 @@ It's a hefty task, and even the most ambitious learner might be put off by the s
 
 
 Imagine you're studying for your French exam coming up. You made some flashcards online, or maybe wrote them out.
-| English | French |
-|-------|--------|
-| nose | nez |
-| ears | oreilles |
-| eyes | yeux |
+English | French 
+-------|--------
+nose | nez 
+ears | oreilles 
+eyes | yeux 
 
 You've programmed these words into your short term memory, just enough to recall them on the test. Most students might remember 10 out of 30 words they encountered using this method. 
 
