--- a/_posts/2019-07-01-anki.md
+++ b/_posts/2019-07-01-anki.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Why traditional language learning methods are ineffective, and why you should use an SRS
+tags: [en]
 ---
 
 Language learning has become incredibly simple during the past few decades. We have access to endless textbooks, video calls, flashcard apps, and dictionaries at our fingertips. 
