--- a/_posts/2019-07-07-ankiJP.md
+++ b/_posts/2019-07-07-ankiJP.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: なぜ伝統的な語学学習法は効果がないのか、そしてSRSという方法を使うべきですか
+tags: [jp]
 ---
 
 過去数十年の間に、言語の学習は非常に簡単になりました。私達は、限りない教科書、ビデオチャット、フラッシュカードアプリ、そして辞書にアクセスすることが出来ます。
