--- a/_posts/2019-07-07-ankiJP.md
+++ b/_posts/2019-07-07-ankiJP.md
@@ -3,7 +3,7 @@ layout: post
 title: なぜ伝統的な語学学習法は効果がないのか、そしてSRSという方法を使うべきですか
 tags: [jp]
 ---
-
+<span style= "font-family: Babas;">
 過去数十年の間に、言語の学習は非常に簡単になりました。私達は、限りない教科書、ビデオチャット、フラッシュカードアプリ、そして辞書にアクセスすることが出来ます。
 
 残念ながら、語学教育は向上していません。1980のスペイン語のクラスは今日のを同じものになります（いくつかのオンライン宿題をのぞいます）。
@@ -59,3 +59,4 @@ tags: [jp]
 通過する間隔が長いほど、情報をより長く保持するでしょう。最終的な目標は、それらが数カ月または数年続くようにあなたの間隔を長くすることです。
 
 語学学習を強化するために間隔反復を使ってみてください。新しい単語や概念をどれほど簡単に覚えているかに驚くでしょう。
+</span>
