--- a/_posts/2019-07-01-anki.md
+++ b/_posts/2019-07-01-anki.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: Why traditional language learning methods are ineffective, and why you should use an SRS
+title: "Why traditional language learning methods are ineffective, and why you should use an SRS"
+excerpt: Classrooms and textbooks are outdated. So how can we learn informational more effectively?
 tags: [en]
 ---
 
@@ -12,7 +13,7 @@ I love learning languages almost as much as I love taking shortcuts to solve pro
 
 So how do people learn information so effectively? The answer is surprisingly simple.
 
-# What is a language?
+## What is a language?
 I'm not talking about a linguists definition here - I mean for the learner. What are the things you need to learn when you think about 'mastering' a language?  
 * Reading
 * Writing
@@ -30,7 +31,7 @@ These 6 pillars make up the backbone of any language. Without just one of them, 
 
 It's a hefty task, and even the most ambitious learner might be put off by the sheer amount of effort required. But quite a few of these pillars can be mastered by studying correctly.
 
-# Language Courses
+## Language Courses
 
 
 Imagine you're studying for your French exam coming up. You made some flashcards online, or maybe wrote them out.
@@ -44,7 +45,7 @@ There's 2 problems: First, classes and textbooks are structured so that related 
 
 Second, most students would never return to these flashcards as soon as they finish the test. This is a problem because most of the words will have left their short term memories very quickly. So how do we make sure we can cement every word in our mind, without leaving any behind?
 
-# Spaced Repetition
+## Spaced Repetition
 
 Spaced repetition is a a study method. At it's core, it's a system that rearranges when and what flashcards you see. It deals with both of the problems traditional language learning methods have. 
 
