--- a/_posts/2019-07-07-ankiJP.md
+++ b/_posts/2019-07-07-ankiJP.md
@@ -1,19 +1,21 @@
 ---
 layout: post
-title: なぜ伝統的な語学学習法は効果がないのか、そしてSRSという方法を使うべきですか
+title: "なぜ伝統的な語学学習法は効果がないのでしょうか？そしてなぜあなたはSRSを使うべきなのでしょうか？"
+excerpt: 人々はどのようにしてそれほど効果的に情報を学ぶことができるのでしょう？その答えは驚くほど単純なものでした。
 tags: [jp]
+categories: [記事]
 ---
-<span style= "font-family: Babas;">
-過去数十年の間に、言語の学習は非常に簡単になりました。私達は、限りない教科書、ビデオチャット、フラッシュカードアプリ、そして辞書にアクセスすることが出来ます。
 
-残念ながら、語学教育は向上していません。1980のスペイン語のクラスは今日のを同じものになります（いくつかのオンライン宿題をのぞいます）。
+過去数十年の間に、言語の学習は非常に簡単になりました。私たちは、無数の教科書、ビデオチャット、フラッシュカードアプリ、そして辞書にアクセスすることが出来ます。
 
-私は言語を学ぶのと同じくらい問題を解決するための近道を取るのが好きなので、当然のことながら効率的で効果的な学習の議論に惹かれました。脳に情報を「ダウンロードする」、あるいはたった1ヶ月の研究の後で母語話者を達成するという主張を聞きました。
+しかし、残念ながら、語学教育は進歩していません。スペイン語のクラスは今日においても同じやり方です（いくつかのオンラインの宿題を除いて）。
 
-では、人々はどのように情報をそれほど効果的に学ぶのでしょうか？答えはびっくりで簡単ですよ。
+私は問題解決のために近道を取るのと同様に言語を学びたいので、当然、効率的で効果的な学習に関する議論には興味を惹かれます。そして、私は頭脳に情報を「ダウンロード」する方法や、たった一ヶ月の勉強で流暢に言葉が話せるようになるという話を聞いたのです。
 
-# 言語は何ですか？
-ここで言語学者の定義について話していませんー学習者のために意味します。
+さて、人々はどのようにしてそれほど効果的に情報を学ぶことができるのでしょう？その答えは驚くほど単純なものでした。
+
+## 言語とは何でしょうか？？
+ここで私は言語学者が言う定義について話すつもりはありません。あくまで、語学学習者としてどう捉えるかです。
 
 * 読む
 * 書く
@@ -22,41 +24,39 @@ tags: [jp]
 * 発音
 * 暗記
 
-これらの6本の柱はあらゆる言語を構成します。 そのうちの1つがなければ、自分が流暢だと考えるのは無理です。 これらを習得したとしても、ネイティブのような流暢さはさらに高い要求があります：
+あらゆる言語は、これら６つの柱で構成されています。また、その内の一つでも欠けていれば、自分が本当に流暢であるとは言えません。たとえ、これらを習得したとしても、なおネイティブのような流暢さには及ばないのです。
 
 1. 熟語、比喩、冗談
 2. 詩
 3. 音楽
 4. 文化的な背景
 
-それは多大な仕事であり、そして最も野心的な学習者でさえも、必要な努力の量に気付かないかもしれません。 しかし、これらの柱のかなりの数は正しく勉強することによって習得することができます。
+それは相当な学習量であり、そして最も意欲的な学習者でさえも、必要な努力の量に気付かないかもしれないのです。 しかし、これらの柱の内、かなりのものは正しく勉強することによって習得することができます。
 
-# 言語クラス
-君のフランス語試験について勉強していると想像してください。いくつかのフラッシュカードをオンラインで作った、あるいは多分それらを書き出した。
+## 言語クラス
+あなたが、フランス語の試験について勉強していると想像してください。そして、いくつかのフラッシュカードをオンラインで作ったか、それらを書き出したかもしれないとします。
 
  <img src="https://i.imgur.com/2GoPaV8.png" width="250">
 
-これらの単語を短期記憶にプログラムしました。テストでそれらを思い出すのにちょうど十分です。ほとんどの学生は、この方法を使って遭遇した30の単語のうちの10の単語を覚えているかもしれません。
+あなたは、これらの単語をテストで思い出すのに十分なように、短期の記憶にプログラムしたとします。この方法で、ほとんどの学生は、出題された30の単語の内、10の単語を覚えているかもしれません。
 
-2つの問題があります：　第一に、クラスと教科書は関連する項目がまとめられるように構成されています。この方法で情報を学ぶことはほとんど不可能であるし、なぜなら心は特定のグループに集中していて、脳の中で必要な関係を作ることが出来ないからです。一度ではなく散在している体の部分、色、そして数を学ぶように新しい情報を重ねることははるかに効果的です。
+ここに2つの問題があります：　第一に、授業と教科書は関連する項目がまとめられるように構成されています。しかし、先ほどの方法では、気持ちが特定のグループに集中し、また頭の中で必要な関係を構築できないことから、情報を学ぶことが困難となります。一回きりでなく、散らばっている体の部分、色、数を学べるように、新しい情報を重ねることがより効果的なのです。
 
-
-第二に、ほとんどの学生はテスト終了後すぐにこれらのフラッシュカードに戻ることはありません。単語が短期間の記憶をすぐに残してしまうので、これは問題です。それでは、どうやってこれらの言葉を頭の中で固めることが出来るでしょうか？
-
+第二に、ほとんどの学生はテストが終わればすぐにこれらのフラッシュカードにを見直すことはありません。ほとんどの単語が、短期的な記憶からすぐに消えてしまうことが問題なのです。それでは、どのようにしてこれらの言葉を心に留めることが出来るのでしょうか？
 
 
-# 間隔反復
 
-[間隔反復](https://ja.wikipedia.org/wiki/%E9%96%93%E9%9A%94%E5%8F%8D%E5%BE%A9) とは、前の学習から、その学習内容の復習までの間隔を延ばしてゆくことにより、心理学の間隔効果（英語版）を利用して効果をあげる学習技術です。伝統的な言語学習方法が持っている問題の両方を扱います。
+## SRS
 
-今日学びたい15の新しい単語があると想像してください。すでにあなたが苦しんでいる最初の10と最後の5を知っています。それらのうち4つを扱いますが、最後のものは見逃しています。システムはあまり頻繁に知らない10枚、あなたがより頻繁に扱う4枚、そして得るまであなたが何度も何度も見逃し続けるように見るようにカードを並べ替えます。これは語彙のすべてを順序付けるので、頻繁に逃したカードを見るように。
+[SRS](https://ja.wikipedia.org/wiki/%E9%96%93%E9%9A%94%E5%8F%8D%E5%BE%A9) とは、前の学習から、その学習内容の復習までの間隔を伸ばしてゆくという心理学における間隔効果を利用して効果を上げる学習方法です。それはあなたが見るべきフラッシュカードを何時、どの順番で並べるかということがポイントになります。そしてこれは従来の学習方法が持っていた両方の問題点を上手く扱っているのです。
+
+今日学びたい15の新しい単語があると想像してください。その内、10はすでに知っていて、残りの5つに取り組んでいるとします。あなたはその5つの内、４つに取り組むのですが、残りの1つを忘れてしまうのです。このシステムでは、すでに知っている10は、あまり頻繁に見せないようにし、残りの4つをさらに頻繁に扱い、最後の一つは、あなたがそれを身につけるまで再三繰り返し扱います。これはあなたが見落とすカードをもっと頻繁に見せるように、すべての語彙を並び替えているわけです。
 
 
-これは効率的な方法です - それをどのくらいよく知っているかによってあなたが必要とする情報を見るだけではなく、それはまた後ろに言葉を残さないことを確実にします。今、フランス語のテストのためにそれらの30語彙を決して見直すのではなく、代わりにあなたはあなたの将来の研究の間、より少ない頻度でそれらを見続けるでしょう。
+これは効率的な方法です - それはあなたが、その情報を知っている程度によって、違う見せ方をするだけでなく、確実に言葉が記憶から置き去りにされないようにするのです。そのようにすれば、フランス語のテストのために30の語彙を二度と見直すことなく、あなたは今後の勉強においても、それらを見なければならない頻度はより少なくなるでしょう。
 
 ![](https://knsmr.github.io/reijiro/images/chart.png)
 
-通過する間隔が長いほど、情報をより長く保持するでしょう。最終的な目標は、それらが数カ月または数年続くようにあなたの間隔を長くすることです。
+放って置く時間が長ければ長いほど、その情報は記憶に長く残るでしょう。最終的な目標は、その期間が数ヶ月、数年と長くなることなのです。
 
-語学学習を強化するために間隔反復を使ってみてください。新しい単語や概念をどれほど簡単に覚えているかに驚くでしょう。
-</span>
+語学学習を強化するために、ぜひＳＲＳを使ってみてください。いかに簡単に新しい単語や概念を記憶できるか、あなたは驚くことでしょう。
