--- a/_posts/2019-07-01-anki.md
+++ b/_posts/2019-07-01-anki.md
@@ -1,12 +1,8 @@
 ---
 layout: post
 title: "Why traditional language learning methods are ineffective, and why you should use an SRS"
-excerpt: "Language learning has become incredibly simple during the past few decades. We have access to endless textbooks, video calls, flashcard apps, and dictionaries at our fingertips. 
-
-I love learning languages almost as much as I love taking shortcuts to solve problems, so naturally I was drawn to discussions of efficient and effective learning. I saw claims of "downloading" information to your brain, or even achieving fluency after just one month of study. 
-
-So how do people learn information so effectively? The answer is surprisingly simple."
-tags: [en]
+excerpt: "Language learning has become incredibly simple during the past few decades. We have access to endless textbooks, video calls, flashcard apps, and dictionaries at our fingertips. I love learning languages almost as much as I love taking shortcuts to solve problems, so naturally I was drawn to discussions of efficient and effective learning. I saw claims of "downloading" information to your brain, or even achieving fluency after just one month of study. So how do people learn information so effectively? The answer is surprisingly simple."
+tags: [anki, srs, language learning, english]
 ---
 
 Language learning has become incredibly simple during the past few decades. We have access to endless textbooks, video calls, flashcard apps, and dictionaries at our fingertips. 
