--- a/_posts/2019-07-01-anki.md
+++ b/_posts/2019-07-01-anki.md
@@ -1,8 +1,13 @@
 ---
+excerpt: "Language learning has become incredibly simple during the past few decades. We have access to endless textbooks, video calls, flashcard apps, and dictionaries at our fingertips. I love learning languages almost as much as I love taking shortcuts to solve problems, so naturally I was drawn to discussions of efficient and effective learning. I saw claims of 'downloading' information to your brain, or even achieving fluency after just one month of study. So how do people learn information so effectively? The answer is surprisingly simple."
 layout: post
+tags: 
+  - anki
+  - srs
+  - "language learning"
+  - english
 title: "Why traditional language learning methods are ineffective, and why you should use an SRS"
-excerpt: "Language learning has become incredibly simple during the past few decades. We have access to endless textbooks, video calls, flashcard apps, and dictionaries at our fingertips. I love learning languages almost as much as I love taking shortcuts to solve problems, so naturally I was drawn to discussions of efficient and effective learning. I saw claims of "downloading" information to your brain, or even achieving fluency after just one month of study. So how do people learn information so effectively? The answer is surprisingly simple."
-tags: [anki, srs, language learning, english]
+
 ---
 
 Language learning has become incredibly simple during the past few decades. We have access to endless textbooks, video calls, flashcard apps, and dictionaries at our fingertips. 
@@ -14,6 +19,7 @@ I love learning languages almost as much as I love taking shortcuts to solve pro
 So how do people learn information so effectively? The answer is surprisingly simple.
 
 ## What is a language?
+
 I'm not talking about a linguists definition here - I mean for the learner. What are the things you need to learn when you think about 'mastering' a language?  
 * Reading
 * Writing
@@ -33,11 +39,9 @@ It's a hefty task, and even the most ambitious learner might be put off by the s
 
 ## Language Courses
 
-
 Imagine you're studying for your French exam coming up. You made some flashcards online, or maybe wrote them out.
 
  <img src="https://i.imgur.com/2GoPaV8.png" width="250">
-
 
 You've programmed these words into your short term memory, just enough to recall them on the test. Most students might remember 10 out of 30 words they encountered using this method. 
 
