--- a/_posts/2019-07-01-anki.md
+++ b/_posts/2019-07-01-anki.md
@@ -12,7 +12,7 @@ title: "Why traditional language learning methods are ineffective, and why you s
 
 Language learning has become incredibly simple during the past few decades. We have access to endless textbooks, video calls, flashcard apps, and dictionaries at our fingertips. 
 
-Unfortunatley, language education hasn't improved. A spanish class from the 80's would be functionally identical to one today (save for a few online homeworks). 
+Unfortunately, language education hasn't improved. A spanish class from the 80's would be functionally identical to one today (save for a few online homeworks). 
 
 I love learning languages almost as much as I love taking shortcuts to solve problems, so naturally I was drawn to discussions of efficient and effective learning. I saw claims of "downloading" information to your brain, or even achieving fluency after just one month of study. 
 
