social media links

--- a/_posts/2019-07-07-ankiJP.md
+++ b/_posts/2019-07-07-ankiJP.md
@@ -14,7 +14,7 @@ categories: [記事]
 
 さて、人々はどのようにしてそれほど効果的に情報を学ぶことができるのでしょう？その答えは驚くほど単純なものでした。
 
-## 言語とは何でしょうか？？
+## 言語とは何でしょうか？
 ここで私は言語学者が言う定義について話すつもりはありません。あくまで、語学学習者としてどう捉えるかです。
 
 * 読む
