changed thumbnail image for facebook

--- a/_posts/2019-07-07-ankiJP.md
+++ b/_posts/2019-07-07-ankiJP.md
@@ -4,6 +4,8 @@ title: "なぜ伝統的な語学学習法は効果がないのでしょうか？
 excerpt: 人々はどのようにしてそれほど効果的に情報を学ぶことができるのでしょう？その答えは驚くほど単純なものでした。
 tags: [jp]
 categories: [記事]
+image: img/srs.png
+
 ---
 
 過去数十年の間に、言語の学習は非常に簡単になりました。私たちは、無数の教科書、ビデオチャット、フラッシュカードアプリ、そして辞書にアクセスすることが出来ます。
