changed thumbnail image for facebook

--- a/_posts/2019-07-07-ankiJP.md
+++ b/_posts/2019-07-07-ankiJP.md
@@ -4,7 +4,7 @@ title: "なぜ伝統的な語学学習法は効果がないのでしょうか？
 excerpt: 人々はどのようにしてそれほど効果的に情報を学ぶことができるのでしょう？その答えは驚くほど単純なものでした。
 tags: [jp]
 categories: [記事]
-image: img/srs.png
+image: srs.png
 
 ---
 
