--- a/_posts/2019-07-01-anki.md
+++ b/_posts/2019-07-01-anki.md
@@ -7,6 +7,7 @@ tags:
   - "language learning"
   - english
 title: "Why traditional language learning methods are ineffective, and why you should use an SRS"
+comments: true
 
 ---
 
