added header images to all posts

--- a/_posts/2019-07-01-anki.md
+++ b/_posts/2019-07-01-anki.md
@@ -6,6 +6,7 @@ tags:
   - srs
   - "language learning"
   - english
+header-img: "https://www.researchgate.net/profile/Dan-Suciu-2/publication/220988194/figure/fig1/AS:669510495375362@1536635149190/Spaced-repetition-with-flashcard-learning-Repetition-intervals-increase-for-subsequent.png"
 title: "Why traditional language learning methods are ineffective, and why you should use an SRS"
 comments: true
 
